Results 1) thumb grid layout bug fixes 2) breadcrumbs now pay attention to wImgs flag

--- a/trunk/themes/pahma/style/delphi_style.css
+++ b/trunk/themes/pahma/style/delphi_style.css
@@ -479,9 +479,9 @@ code.hidden {
 
 	width: 120px;
 	/*Min Height Hack - http://www.dustindiaz.com/min-height-fast-hack */
-	min-height: 136px;
+	min-height: 144px;
 	height: auto !important;
-	height: 136px;
+	height: 144px;
 	
 	margin: 0 0 10px 2px;
 	padding: 0;
